src/App.css
:root {
	--font-size: 24px;

	--overlap_bottom: 8px;
	--info_panel_height: calc(var(--font-size)*2);
	--main_gap: calc(var(--font-size) / 2);

	/*
	 This properties will be possible changed in run time in
	 AppCode.js componentDidMount().
	============================================================= */
	--screen-height: 100vh;
	--screen-width: 100vh;
	/* ========================================================== */

	--text-height-portrait: calc(

			(
				var(--screen-height) - var(--overlap_bottom) -
					calc(var(--main_gap) * 2) - calc(var(--info_panel_height)*2)
			) / 2
	);

	--text-height-landscape: calc(
		var(--screen-width) - calc(var(--info_panel_height)*2) -
			var(--main_gap) - var(--overlap_bottom)
	);

	--settings-color: #add8e6; /* #522719 */
	--background-color: #ffffff; /* #000000 */
	--base-text-color: #000000; /* #ffffff */
	--danger-color: #00bfff; /* #ff4000 */
	--english-appcode__speaking-text-color: #94a11f; /* 6b5ee0 */
	--english-text-color: #6b5ee0; /* #94a11f */
	--grey-color: #888888; /*   #777777 */
	--shadow-color: #222222; /* #dddddd */
}

/* grid
============================================================= */

.appcode__grid {
	background-color: var(--background-color);
	color: var(--base-text-color);
	display: grid;
	filter: invert(100%);
	font-size: var(--font-size);
	grid-column-gap: var(--main_gap);
	grid-row-gap: var(--main_gap);
	padding: 0 8px;
	margin: 0;
	font-family: sans-serif;
}

@media (orientation: portrait) {
	.appcode__grid {
		grid-template-columns: 1fr;
		grid-template-rows: var(--text-height-portrait)
			var(--info_panel_height) var(--text-height-portrait);
		grid-template-areas: 'russian' 'info' 'english';
	}
	.appcode__icon_rotate {
		transform: rotate(270deg);
		margin-left: 7px;
	}
	.appcode__icon_rotate_back {
		transform: rotate(90deg);
		margin-right: 7px;
	}
}

@media (orientation: landscape) {
	.appcode__grid {
		grid-template-columns: 1fr 1fr;
		grid-template-rows: var(--text-height-landscape)
			var(--info_panel_height);
		grid-template-areas: 'russian english' 'info info';
	}
	.appcode__icon_rotate {
		transform: rotate(90deg);
	}
	.appcode__icon_rotate_back {
		transform: rotate(270deg);
	}
}

.appcode__info {
	grid-area: info;
}

.appcode__russian {
	grid-area: russian;
}

.appcode__english {
	grid-area: english;
}

.appcode__scroll {
	max-height: 100%;
	overflow-y: scroll;
	/* -webkit-overflow-scrolling: touch; */
}

/* font size and colors
============================================================= */

.appcode__eng_text_color {
	color: var(--english-text-color);
}

.appcode__speaking {
	color: var(--english-appcode__speaking-text-color);
}

/* icons
============================================================= */

.appcode__icon_invert__horizontal {
	transform: scaleX(-1);
}

/* flex boxes
============================================================= */

.appcode__center {
	height: 100%;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
}

.appcode__info2 {
	height: 100%;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

/*   PopupWindow.css   ********************************************************** */

.popup__full_screen_div {
	align-items: center;
	bottom: 0;
	display: flex;
	justify-content: center;
	left: 0;
	overflow: hidden;
	position: fixed;
	right: 0;
	top: 0;
	z-index: 5;
}

.popup__full_screen_div_opacity {
	background-color: var(--grey-color);
	bottom: 0;
	left: 0;
	opacity: 0.4;
	overflow: hidden;
	position: fixed;
	right: 0;
	top: 0;
	z-index: 4;
}

.popup__opacity_1 {
	opacity: 1;
	transition: opacity 0.9s ease;
}
.popup__opacity_0 {
	opacity: 0;
	transition: opacity 0.9s ease;
}

.popup__window {
	/* max-height: calc(100vh - 4rem); */
	background-color: var(--background-color);
	border-radius: 5px;
	box-shadow: var(--shadow-color) 0px 13px 26px 0px;
	padding: 10px 25px 10px 20px;
	position: relative;
}

.popup__list {
	/* max-height: calc(100vh - 4rem); */
	overflow-y: scroll;
	align-items: flex-start;
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	max-width: 10em;
}

.popup__cancel {
	position: absolute;
	top: 2px;
	right: 10px;
	cursor: pointer;
}

.popup__row {
	padding: 0.6rem 0.4rem;
	align-items: center;
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
}

.popup__row_selected {
	background-color: var(--danger-color);
	border-radius: 5px;
}

.popup__header {
	font-weight: bold;
}

.popup__gap {
	padding-right: 10px;
}

.popup__scroll {
	max-height: 80vh;
	overflow-y: scroll;
	/* -webkit-overflow-scrolling: touch; */
}

.popup__width35 {
	width: 35px;
}

.popup_voices_zindex {
	z-index: 10;
}

